2006-04-03  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.14.1.

2006-03-29  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Don't have a modal preferences dialog (#314595).

2006-03-29  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Don't show the main window until there is nothing else that could
	go wrong (#321859).

2006-03-29  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Handle NULL profiles.

2006-03-29  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Don't set the duration and track number as resizable (#336476,
	thanks Wouter Bolsterlee).

2006-03-28  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/Makefile.am:
	* tests/Makefile.am:
	Don't hardcode compiler options, use GNOME_COMPILE_WARNINGS (#141587)

2006-03-28  Dennis Cranston  <dennis_cranston@yahoo.com>

	* src/bacon-volume.c:
	Volume should not display stock_volume-0 for volume > 0 (#335779).

2006-03-28  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Handle sortnames being NULL.

2006-03-28  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Don't leak the GnomeProgram (#335749)

2006-03-24  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/C/sound-juicer.xml:
	Tell people use to id3mux in the MP3 pipeline.
	
	* configure.in:
	Check for Taglib.

	* src/gsttaglib.cc:
	* src/gsttaglib.h:
	Add internal copy of GStreamer's taglib-based tagger.  Will remove
	when this is in gst-plugins-good.

	* src/sj-main.c:
	If there is no id3mux element available, register our copy.

2006-03-23  Christian Neumair  <chris@gnome-de.org>

	* src/sj-main.c:
	Ensure that play/pause button size stays constant.

	* src/sj-play.c:
	Don't process state change notifications from pipeline elements.
	Remove pending button_change_id/cb_set_time timeouts when registering
	them.
	Work around GStreamer bug (#326311) when seeking or changing song.
	This won't be neccessary when depending on GStreamer 0.10.5.

	Fixes #326311.
