@@ -1,3 +1,8 @@
+2006-04-08  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-structures.h:
+	Remove unused structure.
+
 2006-04-03  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
